# alma-analytics-report-azure-func

./: README.md  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: azure-functions-app-python.yml
WrapperFunction/: __init__.py
WrapperFunction/Models/: ApiCall.py  Exceptions.py  Request.py
