[tool.poetry]
name = "alma-analytics-report-azure-func"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
azure-functions = "^1.21.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
azure-identity = "^1.19.0"
azure-keyvault = "^4.2.0"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
